SubBt/force-app/main/default/objects/Project_Takeoff__c/Project_Takeoff__c.object-meta.xml
<CustomObject>
    <label>Takeoff</label>
    <nameField>
        <displayFormat>TO-{000000}</displayFormat>
        <label>Takeoff #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Takeoffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>