SubBt/force-app/main/default/objects/Project_Takeoff__c/fields/Build_Phase__c.field-meta.xml
<CustomField>
    <fullName>Build_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Phase</label>
    <referenceTo>Build_Phase__c</referenceTo>
    <relationshipLabel>Takeoffs</relationshipLabel>
    <relationshipName>Takeoffs</relationshipName>
    <type>Lookup</type>
</CustomField>