SubBt/force-app/main/default/objects/Project_Takeoff__c/fields/Linear_Feet__c.field-meta.xml
<CustomField>
    <fullName>Linear_Feet__c</fullName>
    <label>Total Linear Feet</label>
    <summarizedField>Project_Takeoff_Lines__c.Linear_Feet__c</summarizedField>
    <summaryForeignKey>Project_Takeoff_Lines__c.Project_Takeoff__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>