SubBt/force-app/main/default/objects/Project_Takeoff__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bighorn</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>