SubBt/force-app/main/default/objects/Project_Takeoff__c/fields/SFQT_L_W__c.field-meta.xml
<CustomField>
    <fullName>SFQT_L_W__c</fullName>
    <label>Total SFQT (L-W)</label>
    <summarizedField>Project_Takeoff_Lines__c.SQFT_LW__c</summarizedField>
    <summaryForeignKey>Project_Takeoff_Lines__c.Project_Takeoff__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>