SubBt/force-app/main/default/objects/Project_Takeoff__c/fields/SQFT_LH__c.field-meta.xml
<CustomField>
    <fullName>SQFT_LH__c</fullName>
    <label>Total SQFT (L-H)</label>
    <summarizedField>Project_Takeoff_Lines__c.SQFT_LH__c</summarizedField>
    <summaryForeignKey>Project_Takeoff_Lines__c.Project_Takeoff__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>