SubBt/force-app/main/default/objects/Project_Takeoff__c/fields/TakeOff_date__c.field-meta.xml
<CustomField>
    <fullName>TakeOff_date__c</fullName>
    <label>TakeOff date</label>
    <type>Date</type>
</CustomField>