SubBt/force-app/main/default/objects/Project_Takeoff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Project__c</columns>
    <columns>Community__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SFQT_L_W__c</columns>
    <columns>SQFT_LH__c</columns>
    <columns>Linear_Feet__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>